# chess

./: CMakeLists.txt  README.md
docs/: uml.txt
src/core/: color_attribute.c  game.c  move_history.c  player.c
src/core/algebraic_parsing/: algebraic_parsing.c
src/core/algebraic_parsing/include/: algebraic_parsing.h
src/core/board/: board.c  square.c
src/core/board/include/: board.h  square.h
src/core/include/: color_attribute.h  game.h  move_history.h  player.h
src/core/io/: repl.c
src/core/io/include/: repl.h
src/core/piece/: piece.c  piece_type.c
src/core/piece/include/: piece.h  piece_type.h
src/main/: main.c
src/main/include/: constants_macros.h
